[STYLE] scrollbar and skill page flex display fix

--- a/src/app/Components/skills/skills.component.css
+++ b/src/app/Components/skills/skills.component.css
@@ -1,89 +1,82 @@
-.container-fluid {
-  height: 92vh;
-}
+/* .container-fluid {
+    height: 92vh;
+} */
 
 h1 {
-  max-width: min-content;
+    max-width: min-content;
 }
 
 .item-container {
-  /* height: 80vh; */
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  /* overflow-y: scroll; */
-  cursor: pointer;
-}
-
-.item:last-child {
-  margin-right: auto;
+    display: flex;
+    flex-wrap: wrap;
+    cursor: pointer;
 }
 
 .item {
-  height: 450px;
-  border: #4a5c6a solid 2px;
-  margin: 10px;
-  padding: 10px;
-  width: 30%;
-  color: #ccc;
-  transition: 0.18s all linear;
-  box-shadow: #333 2px 2px 30px;
+    height: 450px;
+    border: #4a5c6a solid 2px;
+    margin: 10px;
+    padding: 10px;
+    width: 31.5%;
+    color: #ccc;
+    transition: 0.18s all linear;
+    box-shadow: #333 2px 2px 30px;
 }
 
 .item .item-top img {
-  width: 100px;
-  height: 100px;
+    width: 100px;
+    height: 100px;
 }
 
 .item .item-bottom {
-  font-size: 20px;
+    font-size: 20px;
 }
 
 .item .item-bottom .title {
-  font-size: 45px;
-  color: #0181b0;
-  font-family: "Roboto Condensed", sans-serif;
+    font-size: 45px;
+    color: #0181b0;
+    font-family: "Roboto Condensed", sans-serif;
 }
 
 .item:hover {
-  border: 4px solid #0181b0;
-  transform: scale(1.03);
-  background-color: rgba(0, 0, 0, 2);
-  color: #fff;
-  box-shadow: #aaa 2px 2px 20px;
+    border: 4px solid #0181b0;
+    transform: scale(1.03);
+    background-color: rgba(0, 0, 0, 2);
+    color: #fff;
+    box-shadow: #aaa 2px 2px 20px;
 }
 
 .item .item-bottom .description {
-  /* color: #ccc; */
-  font-size: 22px;
+    /* color: #ccc; */
+    font-size: 22px;
 }
 
 @media screen and (max-width: 1084px) {
-  .item {
-    width: 43%;
-    height: 90%;
-    padding: 10px;
-    margin: 10px;
-  }
-  .item-top {
-    display: flex;
-    justify-content: center;
-  }
-  .item-top img {
-    width: 90px;
-    height: 90px;
-  }
-  .item .item-bottom {
-    font-size: 25px;
-    text-align: center;
-  }
-  .item .item-bottom .title {
-    font-size: 25px;
-  }
-  .item .item-bottom .description {
-    display: none;
-  }
-  .item:last-child {
-    margin-right: 10px;
-  }
+    .item {
+        width: 43%;
+        height: 90%;
+        padding: 10px;
+        margin: 10px;
+    }
+    .item-top {
+        display: flex;
+        justify-content: center;
+    }
+    .item-top img {
+        width: 90px;
+        height: 90px;
+    }
+    .item .item-bottom {
+        font-size: 25px;
+        text-align: center;
+    }
+    .item .item-bottom .title {
+        font-size: 25px;
+    }
+    .item .item-bottom .description {
+        display: none;
+    }
+    .item:last-child {
+        margin-right: 10px;
+    }
 }
